--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "expo-module build",
     "prepare": "expo-module prepare",
     "test": "jest",
-    "lint": "eslint .",
+    "lint": "expo-module lint",
     "format": "prettier --write .",
     "prepublishOnly": "expo-module prepublishOnly"
   },
