--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "expo-module build",
     "prepare": "expo-module prepare",
     "test": "jest",
-    "lint": "expo-module lint",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "format": "prettier --write .",
     "prepublishOnly": "expo-module prepublishOnly"
   },
@@ -34,6 +35,7 @@
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-native": "^5.0.0",
     "expo": "~52.0.46",
     "expo-module-scripts": "~3.0.0",
     "prettier": "^3.5.3",
