--- a/package.json
+++ b/package.json
@@ -44,12 +44,17 @@
     "expo": "~52.0.46",
     "expo-module-scripts": "~3.0.0",
     "prettier": "^3.5.3",
-    "react-native": "0.76.9",
-    "typescript-eslint": "^8.32.1"
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.76.9"
   },
   "peerDependencies": {
     "expo": "*",
-    "react": "*",
-    "react-native": "*"
+    "react": "18.2.0",
+    "react-native": "0.76.9"
+  },
+  "dependencies": {
+    "styled-components": "^6.1.18",
+    "typescript": "^5.8.3"
   }
 }
