--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -1,7 +1,11 @@
 {
-  "$schema": "https://unpkg.com/@changesets/config/schema.json",
-  "changelog": ["@changesets/changelog-github", { "repo": "seu-user/seu-repo" }],
+  "$schema": "https://unpkg.com/@changesets/config@3.1.1/schema.json",
+  "changelog": "@changesets/cli/changelog",
   "commit": false,
-  "access": "public",
-  "baseBranch": "main"
+  "fixed": [],
+  "linked": [],
+  "access": "restricted",
+  "baseBranch": "main",
+  "updateInternalDependencies": "patch",
+  "ignore": []
 }
