--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vanessa.sitibaldi/mylibraryteste",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "My new module",
   "main": "build/index.js",
   "types": "build/index.d.ts",
@@ -32,6 +32,7 @@
   "license": "MIT",
   "homepage": "https://github.com/vanessasitibaldi/my-ui-library.git#readme",
   "devDependencies": {
+    "@changesets/changelog-github": "^0.5.1",
     "@changesets/cli": "^2.29.4",
     "@types/react": "~18.2.45",
     "@typescript-eslint/eslint-plugin": "^8.32.1",
