--- a/example/package.json
+++ b/example/package.json
@@ -9,13 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@vanessa.sitibaldi/mylibraryteste": "^0.1.2",
     "expo": "~52.0.46",
-    "react": "18.2.0",
+    "react": "18.3.1",
     "react-native": "0.76.9"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "~19.0.10",
+    "@types/react": "~18.3.12",
     "typescript": "~5.8.3"
   },
   "private": true,
@@ -24,5 +25,4 @@
       "nativeModulesDir": ".."
     }
   }
-
 }
