--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "lint:fix": "eslint . --fix",
     "format": "prettier --write .",
     "prepublishOnly": "expo-module prepublishOnly",
-    "changeset": "changeset",
     "version-packages": "changeset version",
     "release": "changeset publish",
     "open:ios": "xed example/ios",
-    "open:android": "open -a \"Android Studio\" example/android"
+    "open:android": "open -a \"Android Studio\" example/android",
+    "changeset:cli": "changeset"
   },
   "keywords": [
     "react-native",
@@ -33,7 +33,7 @@
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.1",
     "@changesets/cli": "^2.29.4",
-    "@types/react": "~18.2.50",
+    "@types/react": "~19.0.10",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "eslint": "^8.57.0",
@@ -46,12 +46,13 @@
     "prettier": "^3.2.5",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.73.8"
+    "react-native": "0.79.2",
+    "@expo/config-plugins": "~10.0.0"
   },
   "peerDependencies": {
     "expo": ">=53.0.0",
     "react": ">=19.0.0",
-    "react-native": ">=0.73.8"
+    "react-native": ">=0.79.2"
   },
   "dependencies": {
     "styled-components": "^6.1.18",
@@ -60,5 +61,16 @@
   "private": false,
   "publishConfig": {
     "access": "public"
+  },
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "listUnknownPackages": false
+      }
+    }
+  },
+  "resolutions": {
+    "@expo/config-plugins": "~10.0.0"
   }
+
 }
