--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
   },
   "dependencies": {
     "styled-components": "^6.1.18",
-    "typescript": "^5.3.3"
+     "typescript": "~5.3.3"
   },
   "private": false,
   "publishConfig": {
