--- a/example/package.json
+++ b/example/package.json
@@ -4,6 +4,7 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
+    "prebuild": "expo prebuild",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web"
@@ -12,17 +13,28 @@
     "@vanessa.sitibaldi/mylibraryteste": "^1.0.1",
     "expo": "~53.0.2",
     "react": "19.0.0",
-    "react-native": "0.73.8"
+    "react-native": "0.79.2"
   },
   "devDependencies": {
     "@babel/core": "^7.24.5",
-    "@types/react": "~18.2.50",
+    "@types/react": "~19.0.10",
     "typescript": "~5.3.3"
   },
   "private": true,
   "expo": {
     "autolinking": {
       "nativeModulesDir": ".."
+    },
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "listUnknownPackages": false
+      }
     }
-  }
+  },
+  "resolutions": {
+    "metro": "^0.82.0",
+    "metro-config": "^0.82.0",
+    "metro-resolver": "^0.82.0"
+  },
+  "type": "module"
 }
