--- a/example/package.json
+++ b/example/package.json
@@ -6,23 +6,29 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "prebuild": "expo prebuild"
   },
   "dependencies": {
-    "@vanessa.sitibaldi/mylibraryteste": "^0.1.2",
-    "expo": "~52.0.46",
-    "react": "18.3.1",
-    "react-native": "0.76.9"
+    "@vanessa.sitibaldi/mylibraryteste": "^1.0.1",
+    "expo": "~53.0.9",
+    "react": "19.0.0",
+    "react-native": "0.79.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "~18.3.12",
+    "@types/react": "~19.0.10",
     "typescript": "~5.8.3"
   },
   "private": true,
   "expo": {
     "autolinking": {
       "nativeModulesDir": ".."
+    },
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "listUnknownPackages": false
+      }
     }
   }
 }
