--- a/package.json
+++ b/package.json
@@ -25,37 +25,40 @@
   ],
   "repository": "https://github.com/vanessasitibaldi/my-ui-library.git",
   "bugs": {
-    "url": "https://github.com/vanessasitibaldi/my-ui-library.git/issues"
+    "url": "https://github.com/vanessasitibaldi/my-ui-library/issues"
   },
-  "author": "vanessasitibaldi <vanessasitibaldi> ()",
+  "author": "vanessasitibaldi <vanessa.sitibaldi@example.com>",
   "license": "MIT",
-  "homepage": "https://github.com/vanessasitibaldi/my-ui-library.git#readme",
+  "homepage": "https://github.com/vanessasitibaldi/my-ui-library#readme",
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.1",
     "@changesets/cli": "^2.29.4",
-    "@types/react": "~18.2.45",
-    "@typescript-eslint/eslint-plugin": "^8.32.1",
-    "@typescript-eslint/parser": "^8.32.1",
-    "eslint": "^8.57.1",
-    "eslint-config-prettier": "^10.1.5",
-    "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^5.2.0",
+    "@types/react": "~19.0.10",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-native": "^5.0.0",
-    "expo": "~52.0.46",
-    "expo-module-scripts": "~3.0.0",
+    "expo": "~53.0.9",
+    "expo-module-scripts": "~4.1.7",
+    "metro": "^0.82.0",
+    "metro-config": "^0.82.0",
+    "metro-resolver": "^0.82.0",
     "prettier": "^3.5.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.76.9"
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.2",
+    "typescript": "^5.3.3"
   },
   "peerDependencies": {
     "expo": "*",
-    "react": "18.2.0",
-    "react-native": "0.76.9"
+    "react": "19.0.0",
+    "react-native": "0.79.2"
   },
   "dependencies": {
-    "styled-components": "^6.1.18",
-    "typescript": "^5.8.3"
+    "styled-components": "^6.1.18"
   },
   "private": false,
   "publishConfig": {
