--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/react": "~19.0.10",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
+    "@typescript-eslint/typescript-estree": "^8.33.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.33.2",
@@ -63,7 +64,7 @@
     "react-native": "0.79.2",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.8.0",
-    "typescript": "^5.3.3"
+    "typescript": "5.3.3"
   },
   "peerDependencies": {
     "expo": "*",
